/** Arynga CarSync(TM)
 * 2014-2015 Copyrights by Arynga Inc. All rights reserved.
 */

#ifndef RMQ_TRANSPORT_TEST_H
#define RMQ_TRANSPORT_TEST_H

#ifdef __cplusplus
extern "C" {
# endif

#include <CUnit/Basic.h>

CU_pSuite rmq_transport_tests_getSuite();

#ifdef __cplusplus
}
#endif

#endif // PROTO_TEST_H
